# SigLIP-Person-Finder

./: .env.example  .gitignore  README.md  generate_descriptions.py  inference_image.py  inference_video.py  openset_reid_colab.ipynb  pyproject.toml  train.py  visualize_dataset.py
utils/: collators.py  datasets.py  download_dataset.py  hf_upload.py  tools.py  upload_model_to_hf.py  vlms.py
